--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .landpage-button{
+        @apply z-10 mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg 
+        focus:outline-none transform transition hover:scale-105 duration-300 ease-in-out cursor-pointer;
+    }
+
+    .default-button{
+        @apply z-10 inline-flex items-center px-4 py-2 bg-gray-800 border border-transparent rounded-md font-semibold text-xs 
+        text-white uppercase tracking-widest hover:bg-gray-700 active:bg-gray-900 focus:outline-none focus:border-gray-900 
+        transition ease-in-out duration-150;
+    }
+}
